$Id: ChangeLog,v 1.80 2004/09/24 22:02:02 h_oudejans Exp $

2004-09-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Converter underscores to spaces in machines and extensions
	* Fixed: If machines and/or extensions were saved the last time
		    and catapult is started and stopped immidiately,
		    the selected stuff was lost.
	* Machine and extension names can now contain spaces.
	* Added 'touch' in the windows build steps to avoid having to copy
	   the bitmaps over and over again.
	* Cleaned up the output of the windows build process.

2004-09-24 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed some sizers in the video and misc pages
	* Added rensha turbo support
	* Added Load/Save/Save As OpenMSX settings.

2004-09-11 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Changed the Misc Controls page layout
	* Several cosmetic fixes
	* Removed the Throttle button. Same functionality is now in the
	   'Max speed' button.

2004-08-29 Manuel Bilderbeek <manuel@msxnet.org>
	* Implemented minframeskip and maxframeskip completely.

2004-08-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added pause status in statusbar.
	* Fixed width of machine/extension lists.
	* Statusbar is now restore after closing a menu.

2004-06-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Removed all openMSX 0.3.4 support
	* Prepared GUI for minframeskip setting support.

2004-05-29 Manuel Bilderbeek <manuel@msxnet.org>
	* Added support for muting individual channels via channel mode

2004-05-28 Maarten ter Huurne <maarten@treewalker.org>
	* Released openmsx-catapult-0.4.0-R1.

2004-05-28 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Windows executable is now created in derived/bin, which is 
	   better for package creation.
	* Windows build defaults now to the Release version.
	* Disabled the m_commands assert. When no commands are
	   available, the GetPendingCommand function will return an empty
	   string. Effectively, this means that the reception of a reply without